--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
   "name": "rust-game-server-architect",
-  "private": true,
+  "homepage": "https://GameCy.github.io/RustGameServerArchitect",
+  "private": false,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "jszip": "3.10.1",
@@ -17,6 +20,7 @@
   "devDependencies": {
     "@types/node": "^22.14.0",
     "@vitejs/plugin-react": "^5.0.0",
+    "gh-pages": "^6.3.0",
     "typescript": "~5.8.2",
     "vite": "^6.4.1"
   }
